# nzgeom

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  README.md  setup.cfg  tox.ini
.github/: publish-to-test-pypi.yml
.github/workflows/: publish-to-test-pypi.yml
docs/: conf.py  environment.yml  index.rst  install.rst  usage.rst
src/nzgeom/: __init__.py  coastlines.py  regions.py
src/nzgeom/data/coastlines/: nz-coastlines-and-islands-polygons-topo-150k.txt
src/nzgeom/data/regions/: regional-council-2018-generalised.txt
src/tests/: nzgeom_test.py
