[metadata]
name = nzgeom
version = 0.0.1
author = Timothy W. Hilton
author_email = t.hilton@gns.cri.nz
description = provide geospatial geometry for NZ coastlines and administrative regions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Timothy-W-Hilton/nzgeom
project_urls =
    Bug Tracker = https://github.com/Timothy-W-Hilton/nzgeom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires =
                 geopandas
[options.packages.find]
where = nzgeom
[options.package_data]
nzgeom.data =
            data/coastlines/*.gpkg
            data/regions/*.gpkg
